@@ -129,6 +129,20 @@ public interface ClientConfig extends FeaturesAndProperties {
             "com.sun.jersey.client.property.bufferResponseEntityOnException";
 
     /**
+     * A value of "true" declares that the client will try
+     * to set unsupported HTTP method to HttpURLConnection via reflection.
+     * Enabling this feature might cause security related warnings/errors
+     * and it might break when other JDK implementation is used.
+     *
+     * Use only when you know what you are doing.
+     *
+     * The value MUST be an instance of {@link java.lang.Boolean}.
+     * If the property is absent then the default value is "false".
+     */
+    public static final String PROPERTY_HTTP_URL_CONNECTION_SET_METHOD_WORKAROUND =
+            "com.sun.jersey.client.property.httpUrlConnectionSetMethodWorkaround";
+
+    /**
      * Get the set of provider classes to be instantiated in the scope
      * of the Client
      * <p>
